objects/Contractor__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Company__c</fullName>
        <label>Parent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OnArrival</fullName>
                </value>
                <value>
                    <fullName>LeadCapture</fullName>
                </value>
                <value>
                    <fullName>Event Management</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>Badge Printing</fullName>
                </value>
                <value>
                    <fullName>Session Scanning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contractor</label>
    <nameField>
        <label>Contractor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contractors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>